# lang-est-x-utee

./: .glottologid.txt  AUTHORS  CITATION.cff  EstonianDocumentation.jspwiki  Links.md  Makefile.in  README  README.markdown  README.md  WhatIsThis.jspwiki  _config.yml  acronyms-stems-fst-src.md  autogen.sh  configure.ac  est.md  exceptional_declinations-affixes.md  gi-affixes-fst-src.md  giella-est.pc.in  grammarchecker-grammarcheckers-tools.md  index-header.md  index.md  lemmacount.json  manifest.toml  manifest.toml.in  phonology-fst-src.md  phonology-morphology.jspwiki  phonology-morphology.md  regular_declinations-affixes-fst-src.md  root-fst-src.md  root-morphology.jspwiki  root-morphology.md  sea-üles-baas-githubist.sh  src-cg3-functions.cg3.md  src-fst-affixes-exceptional_declinations.lexc.md  src-fst-affixes-gi.lexc.md  src-fst-affixes-regular_declinations.lexc.md  src-fst-affixes-verbs.lexc.md  src-fst-morphology-affixes-exceptional_declinations.lexc.md  src-fst-morphology-affixes-gi.lexc.md  src-fst-morphology-affixes-regular_declinations.lexc.md  (+22 more)
docs/: Makefile.am  _config.yml  est.jspwiki  index-header.md  language-map.md  verbs-affixes.jspwiki
docs/badgedata/: speller-suggestions.json
src/: Makefile.am  tmp_build.sh
src/cg3/: disambiguator.cg3  oahpa.cg3
src/filters/: Makefile.am  Makefile.am.orig  block-derivations.est.xfscript  compound_definitions.lexc  compound_filter_base.lexc  compound_rules.lexc  deriv_filter.regex  downcase_UCletters.regex  evaluate-flags.est.xfscript  modify-derivations.est.xfscript  numeral-filter.est.xfscript  remove-NotNorm-wordforms.est.xfscript  remove-guessed-forms.est.xfscript  remove-non-gi-forms.est.xfscript  remove-nospell-words.est.xfscript  remove-pl-forms.est.xfscript  remove-sg-forms.est.xfscript  remove-usage-tags.est.xfscript  reorder-tags.est.xfscript  upcase-guessed_proper-strings.est.xfscript  wordpair-filter.est.xfscript
src/fst/: .gitignore  Makefile.am  emoticon.xfscript  guesser-derivations.lexc  guesser-simplex-nouns.lexc  guesser-smth.xfscript  guesser.lexc  lexlang.xfscript  num_final.lexc  pair_final.lexc  phonology.twolc  root.lexc  substitute_blockcap.xfscript  substitutions.xfscript
src/fst/affixes/: exceptional_declinations.lexc  gi.lexc  regular_declinations.lexc  symbols.lexc  verbs.lexc
src/fst/filters/: Makefile.am  block-compounds.est.xfscript  block-derivations.est.xfscript  downcase-derived_proper-strings.est.xfscript  remove-sg-nom-forms.est.xfscript
src/fst/morphology/: .gitignore  Makefile.am  guesser-simplex-nouns.lexc  num_initial.lexc  pair_initial.lexc  phonology.twolc  root.lexc
src/fst/morphology/affixes/: exceptional_declinations.lexc  regular_declinations.lexc  verbs.lexc
src/fst/morphology/stems/: abbreviations.lexc  adjectives.lexc  adverbs.lexc  cardinalnumerals.lexc  comparative_adjectives.lexc  genitive_attributes.lexc  interjections.lexc  noninflecting_adjectives.lexc  noninflecting_verbs.lexc  nouns.lexc  numbers.lexc  ordinalnumerals.lexc  (+5 more)
src/fst/orthography/: Makefile.am  allcaps.xfscript  punctrelax.xfscript  spellrelax.regex
src/fst/scripts/: tagshuffle.pl
src/fst/stems/: abbreviations.lexc  acronyms.lexc  adjectives.lexc  adpositions.lexc  adverbs.lexc  cardinalnumerals.lexc  comparative_adjectives.lexc  conjunctions.lexc  final_components.lexc  genitive-attributes.lexc  genitive_attributes.lexc  interjections.lexc  lexicalized_temporary.lexc  noninflecting_adjectives.lexc  noninflecting_verbs.lexc  nouns.lexc  numbers.lexc  ordinalnumerals.lexc  prefixes.lexc  prepostpos.lexc  pronouns.lexc  proper-names.lexc  propernouns.lexc  superlative_adjectives.lexc  symbol_strings.lexc  verbs.lexc
src/fst/test/: Makefile.am  run-lexc-testcases.sh
src/fst/transcriptions/: transcriptor-date-digit2text.lexc  transcriptor-symbols2text.lexc
src/import/: 15miljon.astak  DB_EMWV_2008_adverbs.sed  README  adjectives.lexc  adpositions.lexc  adverbs.lexc  ara.handmade  bad_after_nom3.sed  bad_final_V.sed  badfinal3_N.sed  badfinal4_N.sed  badfinal_A.sed  badfinal_N.sed  cardinalnumerals.lexc  classify_names.sh  comparative_adjectives.lexc  conjunctions.lexc  diacritics.sed  diacritics2.sed  eemalda_gi.sed  exceptions.lexc  final_components.lexc  fs_gt.inflecting  fs_gt.noninfl  fs_lex.unhandled  fs_lex2algvorm.sed  fs_lex2gt.sh  fs_lex2lemma.sed  fs_lex2pluraletantum.sh  fs_lex2tyyp.sed  fs_lex2verblemma.sed  fs_pref2gt.sh  fs_suf2gt.sh  fsgt2final.sh  generated_extra.lexc  generated_overrides.lexc  genitive_attributes.lexc  git-commit  head_esiosad  insert_weights.py  (+32 more)
src/import/adds/: info.txt  pron.pl  tagger08.c
src/import/tagged/: sentence_line_vaalit2012.dis  story.est.cg3  story.est.dis  story.est.txt  story.stat  vaalit.stat  vaalit2012_est.cg3  vaalit2012_est.dis  vaalit2012_est.txt
src/morphology/: Makefile.am  numbers.lexc  overriding-exceptions.lexc  root.lexc  root.lexc.hjk2  tag_conv1  tags.yaml  teisenda_margendid.sh
src/morphology/affixes/: cmd-rules.lexc  declinations.lexc  digits.lexc  gi.lexc  verbs.lexc
src/morphology/stems/: adjectives.lexc  adverbs.lexc  conjunctions.lexc  genitive-attributes.lexc  interjections.lexc  lexicalized_temporary.lexc  noninfectionals.lexc  nouns.lexc  numerals.lexc  prepostpos.lexc  pronouns.lexc  proper-names.lexc  punctuation.lexc  verbs.lexc
src/orthography/: Makefile.am  allcaps.xfscript  downcase-derived_proper-strings.xeroxscript  downcase-derived_proper-strings.xfscript  downcase-derived_proper-strings.xfscript.in  inituppercase.regex  punctrelax.xfscript  spellrelax-mobile-keyboard.regex  spellrelax.regex
src/phonology/: est-phon.twolc
src/syntax/: disambiguation.cg3  functions.cg3  oahpa.cg3
src/tagsets/: Makefile.am  forcg-big.regex  forcg-big2.regex  forcg.regex
src/transcriptions/: date.lexc  numbers.lexc  transcriptor-abbrevs2text.lexc  transcriptor-clock-digit2text.lexc  transcriptor-date-digit2text.lexc  transcriptor-numbers-digit2text.lexc
tools/tokenisers/: Makefile.am  abbr.txt  cvt_lex.pl  preprocess.txt  tokeniser-disamb-gt-desc.pmscript  tokeniser-gramcheck-gt-desc.pmscript
(+232 files in other folders)
