## Process this file with automake to produce Makefile.in
## Copyright: Sámediggi/Divvun/UiT
## Licence: GPL v3+

# List all md files that should be created from source files in the
# MD_PAGES variable. The filename pattern is as follows:
#
# dir/filename.lexc => filename-dir.md

MD_PAGES=root-morphology.md  \
		  phonology-morphology.md
#		  regular_declinations-affixes.md \
#		  exceptional_declinations-affixes.md \
#		  gi-affixes.md      \
#		  verbs-affixes.md \
# pronouns-stems.md           \
# clitics-morphology.md       \
# compounding-morphology.md   \
# abbreviations-stems.md      \
# acronyms-stems.md           \
# adjectives-oahpa-stems.md   \
# adjectives-stems.md         \
# adpositions-stems.md        \
# adverbs-stems.md            \
# conjunctions-stems.md       \
# interjections-stems.md      \
# nouns-oahpa-stems.md        \
# nouns-stems.md              \
# numerals-stems.md           \
# particles-stems.md          \
# pronouns-stems.md           \
# propernouns-stems.md        \
# punctuation-stems.md        \
# smi-propernouns-stems.md    \
# subjunctions-stems.md       \
# verbs-stems.md              \
# adjectives-oahpa-affixes.md \
include $(top_srcdir)/../giella-core/am-shared/docs-dir-include.am
